<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="required">Required</string>
    <string name="register"><u>Haven\'t Register yet? \nRegister here!</u></string>
    <string name="login_page">Login Page</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="UserProfile">User Profile</string>
    <string name="LoginHere"><u>Already Have an account? \n Login Here</u></string>
    <string name="SetPersonalInformation">Set Personal Information</string>
    <string name="ApplyForApproval">Apply For Approval</string>
    <string name="user_name">  <u>Full Name</u></string>
    <string name="user_icnumber">  <u>IC Number</u></string>
    <string name="user_gender">  <u>Gender</u></string>
    <string name="user_address">  <u>Address</u></string>
    <string name="user_birthday">  <u>Birthday</u></string>
    <string name="user_status">  <u>Status</u></string>
    <string name="user_phone">  <u>Phone</u></string>
    <string name="please_upload_photo">Please upload the photo of your IC \n ( Front &amp; Back )</string>
    <string name="AdminProfile">Admin Profile</string>
    <string name="AboutUs">About Us</string>
    <string name="AboutUsIntro">This app is made by:\n1.Benedict Tea Shang Zhe\n2.Fong Jun Yi\n3.Lai Ming Huan\n4.Jordan Ng Kentzu\n\n\nContact Us?</string>
    <string name="ContactUsPhone"><u>Phone</u></string>
    <string name="ContactUsEmail"><u>E-mail</u></string>
    <string name="title_activity_check_approved_users">CheckApprovedUsers</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ReviewOfApprovalApplication">Review of Approval Application</string>
    <string name="ApprovalApplication">User\'s Approval Application</string>
    <string name="ApprovedUsers">Approved Users</string>
    <string name="ApprovedUser">Approved User</string>
</resources>